--- a/content/_assets/styles/components/q-figure.scss
+++ b/content/_assets/styles/components/q-figure.scss
@@ -18,8 +18,15 @@
 
 // .q-figure
 // -----------------------------------------------------------------------------
+// overwrite bulma
 .content .q-figure {
-  text-align: unset; // overwrite bulma
+  text-align: unset;
+  &:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+  &:not(:first-child) {
+    margin-top: 2rem;
+  }
 }
 
 .q-figure {
@@ -28,7 +35,7 @@
   &:not(.q-figure--group__item) {
     border-top: 1px solid $accent-color;
     border-bottom: 1px solid $accent-color;
-    padding: 1em 0;
+    padding: 1rem 0;
     margin-top: 0.5em;
     margin-left: 0;
     margin-right: 0;
@@ -73,26 +80,14 @@
     width: 100%;
   }
 
-  &__table {
-    &-wrapper {
+  &--table {
+    a {
+      color: currentColor;
     }
-  }
-
-  &__table {
     table {
-      margin: 0 !important;
       caption {
         font-size: 1rem;
-        margin: 1rem;
-      }
-      tfoot {
-        ul {
-          li {
-            &:before {
-              content: "" !important;
-            }
-          }
-        }
+        margin: 0 1rem 1rem;
       }
     }
     th {
@@ -103,44 +98,41 @@
       border-left-width: 0px;
       border-bottom: 0;
     }
-    margin: 0 !important;
-    padding-bottom: 1em;
+  }
+  &.is-table-scale-1 {
+    font-size: 0.1rem;
+  }
+
+  &.is-table-scale-2 {
+    font-size: 0.2rem;
+  }
+
+  &.is-table-scale-3 {
+    font-size: 0.3rem;
+  }
+
+  &.is-table-scale-4 {
+    font-size: 0.4rem;
+  }
+
+  &.is-table-scale-5 {
+    font-size: 0.5rem;
+  }
+
+  &.is-table-scale-6 {
+    font-size: 0.6rem;
+  }
+
+  &.is-table-scale-7 {
+    font-size: 0.7rem;
+  }
+
+  &.is-table-scale-8 {
     font-size: 0.8rem;
-    &.q-table-scale-1 {
-      font-size: 0.1rem;
-    }
+  }
 
-    &.q-table-scale-2 {
-      font-size: 0.2rem;
-    }
-
-    &.q-table-scale-3 {
-      font-size: 0.3rem;
-    }
-
-    &.q-table-scale-4 {
-      font-size: 0.4rem;
-    }
-
-    &.q-table-scale-5 {
-      font-size: 0.5rem;
-    }
-
-    &.q-table-scale-6 {
-      font-size: 0.6rem;
-    }
-
-    &.q-table-scale-7 {
-      font-size: 0.7rem;
-    }
-
-    &.q-table-scale-8 {
-      font-size: 0.8rem;
-    }
-
-    &.q-table-scale-9 {
-      font-size: 0.9rem;
-    }
+  &.is-table-scale-9 {
+    font-size: 0.9rem;
   }
 
   .content & {
@@ -181,10 +173,10 @@
     } @else {
       color: $accent-color;
     }
-    height: 1.2em;
+    display: inline-block;
+    height: 0;
     font-weight: 700;
     margin-right: .5rem;
-    margin-top: -.2em;
     .q-figure__label-icon {
       display: inline-block;
       line-height: 1;
