Add tables with shortcodes, and implement basic styling

--- a/content/_assets/styles/components/q-figure.scss
+++ b/content/_assets/styles/components/q-figure.scss
@@ -99,40 +99,63 @@
       border-bottom: 0;
     }
   }
-  &.is-table-scale-1 {
+  &.is-table-scale-1,
+  .quire-page__content &.is-table-scale-1 table,
+  .quire-page__content .content &.is-table-scale-1 .table-key {
     font-size: 0.1rem;
   }
 
-  &.is-table-scale-2 {
+  &.is-table-scale-2,
+  .quire-page__content &.is-table-scale-2 table,
+  .quire-page__content .content &.is-table-scale-2 .table-key {
     font-size: 0.2rem;
   }
 
-  &.is-table-scale-3 {
+  &.is-table-scale-3,
+  .quire-page__content &.is-table-scale-3 table,
+  .quire-page__content .content &.is-table-scale-3 .table-key {
     font-size: 0.3rem;
   }
 
-  &.is-table-scale-4 {
+  &.is-table-scale-4,
+  .quire-page__content &.is-table-scale-4 table,
+  .quire-page__content .content &.is-table-scale-4 .table-key {
     font-size: 0.4rem;
   }
 
-  &.is-table-scale-5 {
+  &.is-table-scale-5,
+  .quire-page__content &.is-table-scale-5 table,
+  .quire-page__content .content &.is-table-scale-5 .table-key {
     font-size: 0.5rem;
   }
 
-  &.is-table-scale-6 {
+  &.is-table-scale-6,
+  .quire-page__content &.is-table-scale-6 table,
+  .quire-page__content .content &.is-table-scale-6 .table-key {
     font-size: 0.6rem;
   }
 
-  &.is-table-scale-7 {
+  &.is-table-scale-7,
+  .quire-page__content &.is-table-scale-7 table,
+  .quire-page__content .content &.is-table-scale-7 .table-key {
     font-size: 0.7rem;
   }
 
-  &.is-table-scale-8 {
+  &.is-table-scale-8,
+  .quire-page__content &.is-table-scale-8 table,
+  .quire-page__content .content &.is-table-scale-8 .table-key {
     font-size: 0.8rem;
   }
 
-  &.is-table-scale-9 {
+  &.is-table-scale-9,
+  .quire-page__content &.is-table-scale-9 table,
+  .quire-page__content .content &.is-table-scale-9 .table-key {
     font-size: 0.9rem;
+  }
+  &.is-table-scale-9,
+  .quire-page__content &.is-table-scale-10 table,
+  .quire-page__content .content &.is-table-scale-10 .table-key {
+    font-size: 1rem;
   }
 
   .content & {
