--- a/_layouts/essay.liquid
+++ b/_layouts/essay.liquid
@@ -1,4 +1,7 @@
 ---
+## CUSTOMIZE FILE -- Conserving Canvas
+## Adds keywords
+##
 class: quire-essay
 layout: base.11ty.js
 description: Essay layout. This layout describes a single-page template that has been augmented with the ability to display a frontmatter-defined abstract (in markdown format) as well as bibliography references.
@@ -15,7 +18,7 @@ description: Essay layout. This layout describes a single-page template that has
 
 <section class="section quire-page__content">
   {% if abstract %}
-    {% abstract abstract=abstract %}
+    {% abstract abstract=abstract keywords=keywords %}
   {% endif %}
   <div class="container">
     <div class="content">
