--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -118,7 +118,14 @@
     grid-column-start: 2;
   }
 }
-
+@media print {
+  .quire-page__content .content .illustrated-list ol li .q-figure {
+    border-top-width: 0;
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 2rem;
+  }
+}
 
 /* GENERAL
 ============================================================================= */
@@ -233,6 +240,7 @@
 .quire-page__content .container .content table {
   margin: 0;
   line-height: 1.5;
+  text-align: left;
 }
 .quire-page__content .container .content table caption {
   font-size: 1rem;
@@ -242,11 +250,16 @@
   margin-bottom: .25em;
   line-height: 1.5;
 }
-.quire-page__content .container .content table ul,
-.quire-page__content .container .content table ol {
+.quire-page__content .container .content table ul {
   list-style: initial;
   padding-left: 0;
   margin-left: .5em;
+  margin-top: 0;
+  margin-bottom: .5em;
+}
+.quire-page__content .container .content table ol {
+  padding-left: 0;
+  margin-left: 3em;
   margin-top: 0;
   margin-bottom: .5em;
 }
@@ -261,24 +274,10 @@
   margin-top: .5em;
   font-size: .875em;
   line-height: 1.5;
+  text-align: left;
 }
 .quire-page__content .content .table-key p {
   margin-bottom: .25em;
-}
-.quire-page__content .content .table-key dl {
-  display: grid;
-  grid-template-columns: 1.5rem auto;
-  row-gap: .25rem;
-  margin-top: 0;
-  margin-left: 0;
-  margin-bottom: .5em;
-}
-.quire-page__content .content .table-key dl dt {
-  font-weight: bold;
-}
-.quire-page__content .content .table-key dl dt,
-.quire-page__content .content .table-key dl dd {
-  margin-bottom: 0;
 }
 table a,
 .table-key a {
@@ -386,9 +385,6 @@ table a,
   font-size: .75rem;
   line-height: 1.6;
 }
-.quire-page__content .container .content figure .q-figure__caption {
-  font-family: "Noto Serif", serif;
-}
 .quire-page__content .container .content .footnotes li,
 .quire-page__content .content .quire-page__content__references dl {
   margin-bottom: .375rem;
@@ -410,7 +406,6 @@ table a,
     break-after: avoid;
     page-break-after: avoid;
   }
-
   .quire-page__content .content .quire-page__content__references dl dd {
     margin-bottom: 0;
   }
@@ -453,9 +448,6 @@ table a,
   .quire-page__header:not(.hero__image) {
     page-break-before: always;
   }
-  /* .quire-page__header.hero__image {
-    display: none;
-  } */
   /* TOCs */
   .quire-contents-list {
     padding: 0;
@@ -468,17 +460,6 @@ table a,
   .quire-page__content .container .content ul {
     margin-bottom: 1em;
   }
-  /* Fallback to standard list CSS */
-  /* .quire-page__content .container .content ul:not(.bio) {
-    list-style-type: disc;
-  }
-  .quire-page__content .container .content .cip-data ul,
-  .quire-page__content .container .content ul.quire-contributors-list {
-    list-style-type: none;
-  }
-  .quire-page__content .container .content ul li::before {
-    content: none;
-  } */
   /* Make Intro 2 column in PDF */
   #intro.quire-page .quire-page__content {
     column-count: 2;
@@ -497,32 +478,6 @@ table a,
   .q-figure__label {
     line-height: 0;
   }
-  /* Fix figure group layout */
-  /* .q-figure.q-figure--group.quire-grid-2,
-  .q-figure.q-figure--group.quire-grid-3 {
-    text-align: left;
-  }
-  .q-figure.q-figure--group.quire-grid-2 .q-figure {
-    width: calc((100% - 2rem) / 2);
-    margin-right: 1rem;
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 0;
-  }
-  .q-figure.q-figure--group.quire-grid-2 .q-figure:nth-child(2n) {
-    margin-right: 0;
-  }
-  .q-figure.q-figure--group.quire-grid-3 .q-figure {
-    width: calc((100% - 3rem) / 3);
-    margin-right: 1rem;
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 0;
-  }
-  .q-figure.q-figure--group.quire-grid-3 .q-figure:nth-child(3n) {
-    margin-right: 0;
-  } */
-
   /* Add ornament to blank pages */
   @page:blank {
     background-image: url("_assets/images/blank-page.svg");
@@ -537,21 +492,34 @@ table a,
     break-after: always;
     page-break-after: always;
   }
-
+  /* Remove content from pages with `class: pdf-heading-only` */
   .pdf-heading-only .quire-page__content {
     display: none;
   }
-
+  /* Make tables full-width and float to the top of the page */
   .q-figure.q-figure--table {
     column-span: all;
     -prince-float: top;
   }
-
+  .q-figure.q-figure--table#table-51-1 img {
+    max-width: 2in;
+  }
+  .q-figure.q-figure--table#table-63-1 {
+    column-span: none;
+    -prince-float: none;
+  }
+  /* Fix the abstract display */
   .quire-page__abstract .container .content {
     padding-bottom: 0;
   }
   .quire-page__abstract .container::after {
     font-size: .5rem;
   }
-
+  /* Make pages with `class: backmatter` be 2 columns*/
+  .quire-page.backmatter .quire-page__content {
+    column-count: 2;
+    column-gap: 0.1875in;
+    max-width: 100%;
+    margin: 0;
+  }
 }
