--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -155,6 +155,13 @@
   list-style-type: none;
 }
 
+/* Figures
+============================================================================= */
+/* Color the manually added figure labels in group captions */
+.q-figure__caption-content > strong:first-child {
+  color: var(--accent-color);
+}
+
 /* COVER
 ============================================================================= */
 /* Cover Background Image */
@@ -524,6 +531,17 @@ table a,
   }
   /* Make pages with `class: backmatter` be 2 columns*/
   .quire-page.backmatter .quire-page__content {
+    column-count: 2;
+    column-gap: 0.1875in;
+    max-width: 100%;
+    margin: 0;
+  }
+  /* Image adjustments for print */
+  .q-figure.pdf-two-column {
+    column-span: all;
+  }
+   /* Make Foreword 2 column in PDF */
+   #foreword.quire-page .quire-page__content {
     column-count: 2;
     column-gap: 0.1875in;
     max-width: 100%;
