add css to left align table captions

--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -316,6 +316,10 @@ table a,
 .content figure .q-figure__caption {
   font-size: .75rem;
 }
+/* Left align table captions */
+.quire-page__content .container .content table caption {
+  text-align: left
+}
 
 /* COPYRIGHT & ABOUT
 ============================================================================= */
