--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -517,6 +517,11 @@ table a,
   .pdf-heading-only .quire-page__content {
     display: none;
   }
+  @media print {
+    .quire-page.pdf-heading-only {
+      page: no-footer;
+    }
+  }
   /* Make tables full-width and float to the top of the page */
   .q-figure.q-figure--table {
     column-span: all;
