--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -122,6 +122,12 @@
   }
 }
 @media print {
+
+  .quire-page__content .content .illustrated-list {
+    column-span: all;
+  }
+
+
   .quire-page__content .content .illustrated-list ol li .q-figure {
     border-top-width: 0;
     padding-top: 0;
@@ -417,6 +423,10 @@ table a,
 /* PDF
 ============================================================================= */
 @media print {
+  /* Break pages */
+  section.quire-page {
+    page-break-before: always;
+  }
   /* Fix font size on sub-section items */
   .quire-contents-list .menu-list .section-item ol a {
     font-size: 8.5pt;
@@ -466,10 +476,6 @@ table a,
   .title-page .publisher {
     right: 0.375in;
   }
-  /* Headers */
-  .quire-page__header:not(.hero__image) {
-    page-break-before: always;
-  }
   /* TOCs */
   .quire-contents-list {
     padding: 0;
@@ -500,11 +506,20 @@ table a,
   .q-figure__label {
     line-height: 0;
   }
-  /* Add ornament to blank pages */
+  /* Ensure blank pages don't get page numbers */
   @page:blank {
-    background-image: url("_assets/images/blank-page.svg");
-    background-repeat: no-repeat ;
-    background-position: center 28%;
+    @bottom-left {
+      content: none !important;
+    }
+    @bottom-right {
+      content: none !important;;
+    }
+  }
+  /* Ensure the intro breaks to a right-hand page*/
+  .quire-page.page-one {
+    page: page-one;
+    counter-reset: page 1;
+    page-break-before: right;
   }
   /* Image adjustments for print */
   .q-figure.pdf-two-column {
@@ -558,6 +573,7 @@ table a,
     column-span: all;
   }
   /* Remove page number from dedication */
+  #print-copyright.quire-page,
   #dedication.quire-page.frontmatter {
     page: no-footer;
   }
