--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -122,18 +122,32 @@
   }
 }
 @media print {
-
   .quire-page__content .content .illustrated-list {
     column-span: all;
   }
-
-
   .quire-page__content .content .illustrated-list ol li .q-figure {
     border-top-width: 0;
     padding-top: 0;
     margin-top: 0;
     margin-bottom: 2rem;
   }
+}
+
+/* Glossary List */
+.quire-page__content .content dl.glossary-list {
+  line-height: 2;
+  margin-left: 0;
+}
+.quire-page__content .content .glossary-navigation {
+  line-height: 2;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.quire-page__content .content .glossary-navigation > span {
+  color: var(--lavendar)
+}
+.quire-page__content .content .glossary-navigation > *:not(:last-child) {
+  margin-right: 1rem;
 }
 
 /* GENERAL
