--- a/content/_assets/styles/components/quire-entry.scss
+++ b/content/_assets/styles/components/quire-entry.scss
@@ -220,7 +220,7 @@ $image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQgAAABYCAQAAACjBqE3AA
         }
 
         > span.quire-image-info__wrap {
-          color: $print-entry-caption-color;
+          color: $white;
           position: relative;
           display: block;
           padding: 6px 10px;
@@ -641,7 +641,7 @@ $image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQgAAABYCAQAAACjBqE3AA
       }
 
       section.section,
-      section,
+      section:not(.accordion-section__body),
       header {
         @media screen and (min-width: $widescreen) {
           padding-left: 20px;
