--- a/content/_assets/styles/print.scss
+++ b/content/_assets/styles/print.scss
@@ -12,19 +12,10 @@
 
 // Variables (others in the variables.scss file)
 // -----------------------------------------------------------------------------
-$print-base-text-column-width: 4.75in;
-
-$print-bottom-margin: 0.875in;
-$print-top-margin: 0.75in;
-$print-outer-margin: 0.75in;
-$print-inner-margin: 1in;
+$print-base-text-column-width: ($print-width - $print-inner-margin - $print-outer-margin) * .7;
 
 @if $print-width <= 7 {
-  $print-inner-margin: $print-width - $print-base-text-column-width - $print-outer-margin;
-}
-
-@if $print-height <= 10 {
-  $print-top-margin: 0.5in;
+  $print-base-text-column-width: $print-width - $print-inner-margin - $print-outer-margin;
 }
 
 $print-footer-font: $quire-headings-font;
@@ -34,7 +25,7 @@ $print-trim: $print-bleed * 2;
 
 
 @media print {
-  
+
 // Paged Media CSS Setup for PrinceXML
 // -----------------------------------------------------------------------------
   @page {
@@ -57,7 +48,7 @@ $print-trim: $print-bleed * 2;
     @bottom-right {
       content: string(sectiontitle);
       text-transform: uppercase;
-      letter-spacing: .5pt;
+      letter-spacing: 1pt;
       font-size: 7.5pt;
     }
 
@@ -77,7 +68,7 @@ $print-trim: $print-bleed * 2;
     margin-right: $print-outer-margin;
 
     @bottom-left {
-      content: flow(pagetitle);
+      content: string(pagetitle);
     }
 
     @bottom-right {
@@ -97,21 +88,21 @@ $print-trim: $print-bleed * 2;
       content: counter(page, lower-roman);
     }
   }
-  
+
   @page frontmatter:right {
     @bottom-right {
       text-align: right;
       content: counter(page, lower-roman);
     }
   }
-  
+
   @page frontmatter-splash:left {
     background-color: $print-splash-color;
     @bottom-left {
       content: counter(page, lower-roman);
     }
   }
-  
+
   @page frontmatter-splash:right {
     background-color: $print-splash-color;
     @bottom-right {
@@ -119,11 +110,11 @@ $print-trim: $print-bleed * 2;
       content: counter(page, lower-roman);
     }
   }
-  
+
   @page splash {
     background-color: $print-splash-color;
   }
-  
+
   @page splash-image {
     margin-top: 0;
     margin-bottom: -$print-bleed;
@@ -133,23 +124,23 @@ $print-trim: $print-bleed * 2;
     @bottom-right {
       content: none;
     }
-  
+
     @bottom-left {
       content: none;
     }
   }
-  
+
   @page entry-image {
     background-color: $print-entry-image-color;
     @bottom-right {
       content: none;
     }
-  
+
     @bottom-left {
       content: none;
     }
   }
-  
+
   @page cover {
     margin-top: 0;
     margin-bottom: -$print-bleed;
@@ -158,7 +149,7 @@ $print-trim: $print-bleed * 2;
     @bottom-right {
       content: none;
     }
-  
+
     @bottom-left {
       content: none;
     }
@@ -168,18 +159,12 @@ $print-trim: $print-bleed * 2;
     @bottom-right {
       content: none;
     }
-  
+
     @bottom-left {
       content: none;
     }
   }
-  
-  @page page-one:first {
-    @bottom-left {
-      content: none;
-    }
-  }
-  
+
   @page :blank {
     @bottom-left {
       content: none;
@@ -194,36 +179,70 @@ $print-trim: $print-bleed * 2;
   }
   h2, h3, h4, h5, h6 {
     prince-bookmark-level: none;
+    page-break-after: avoid;
   }
+
+// General
+// -----------------------------------------------------------------------------
+
+// Workaround for figures splitting across pages in paged.js
+// TODO remove when https://github.com/thegetty/quire/issues/732 is fixed
+.q-figure:empty {
+	display:none;
+}
+.pagedjs_pages > .pagedjs_page > .pagedjs_sheet > .pagedjs_pagebox > .pagedjs_area > div .q-figure[data-split-from] {
+  padding-top: 1rem;
+}
 
 // Generated content for footers and page #s in TOC
 // -----------------------------------------------------------------------------
-  // .quire-page {
-  //   string-set: pagetitle attr(data-footer-page-title), sectiontitle attr(data-footer-section-title);
-  // }
   .quire-page {
-    string-set: sectiontitle attr(data-footer-section-title);
+    string-set: pagetitle attr(data-footer-page-title), sectiontitle attr(data-footer-section-title);
   }
 
+  // Adds page numbering with dotted leaders in PrinceXML
+  // uses .pagedjs_pages class to handle fallback in Paged.js
   .quire-contents-list {
+    .section-item > a {
+      max-width: 90%;
+    }
+    .section-item > a::after {
+      content: leader(dotted) ' 'target-counter(attr(href, url), page);
+      margin-left: 6pt;
+      margin-right: -10%;
+      .pagedjs_pages & {
+        content: target-counter(attr(href), page);
+        float: right;
+      }
+    }
+    .section-item.frontmatter-page > a::after {
+      content: leader(dotted) ' 'target-counter(attr(href, url), page, lower-roman);
+      font-style: italic;
+      .pagedjs_pages & {
+        content: target-counter(attr(href), page, lower-roman);
+        float: right;
+      }
+    }
     .page-item {
       max-width: 90%;
       a::after {
-        content: target-counter(attr(href), page);
-        margin-left: 6pt; 
+        content: leader(dotted) ' 'target-counter(attr(href, url), page);
+        margin-left: 6pt;
         margin-right: -10%;
-        // This border is a hack for PrinceXML which doesn't
-        // otherwise recognize the box sizing for some reason
-        border: 1pt solid transparent;
+        .pagedjs_pages & {
+          content: target-counter(attr(href), page);
+          float: right;
+        }
       }
-      &.frontmatter-page a::after {
-        content: target-counter(attr(href), page, lower-roman);
+      &.frontmatter-page > a::after {
+        content: leader(dotted) ' 'target-counter(attr(href, url), page, lower-roman);
         font-style: italic;
-        margin-left: 6pt; 
+        margin-left: 6pt;
         margin-right: -10%;
-        // This border is a hack for PrinceXML which doesn't
-        // otherwise recognize the box sizing for some reason
-        border: 1pt solid transparent;
+        .pagedjs_pages & {
+          content: target-counter(attr(href), page, lower-roman);
+          float: right;
+        }
       }
     }
     &.grid {
@@ -251,18 +270,19 @@ $print-trim: $print-bleed * 2;
   .frontmatter {
     page: frontmatter;
   }
-  
-  #half-title .frontmatter,
-  #title .frontmatter {
+
+  .half-title-page,
+  .title-page,
+  .copyright-page {
     page: no-footer;
   }
-  
+
   .quire-splash {
     page: splash;
     .quire-page__header {
       &.hero-image {
-        page: splash-image; 
-        
+        page: splash-image;
+
       }
       &--full-height {
         $print-splash-height: $print-height - $print-top-margin - $print-bottom-margin;
@@ -271,44 +291,38 @@ $print-trim: $print-bleed * 2;
       }
     }
   }
-  
+
   .quire-splash.frontmatter {
     page: frontmatter-splash;
   }
 
-  .quire-entry__image {
-    .quire-entry__image__group-container {
-      figure {
+  .quire-entry {
+    .quire-entry__image-wrap {
+      .q-figure {
         page: entry-image;
-        }
       }
     }
+  }
 
   .quire-contents {
     page: no-footer;
   }
-  
+
   .quire-cover {
     page: cover;
   }
-  
+
 // Set columns and widths for main page content
 // -----------------------------------------------------------------------------
   .quire-page__content {
     column-count: 1;
     max-width: $print-base-text-column-width;
     margin: 0 auto;
-    
-    #title .quire-page &,
-    #half-title .quire-page & {
-      margin: 0;
-      max-width: 100%;
-    }
-    
+
     .quire-contents & {
       margin: 0;
       max-width: 100%;
-      
+
       .quire-contents-list {
         &:not(.grid) {
           max-width: $print-base-text-column-width;
@@ -316,7 +330,7 @@ $print-trim: $print-bleed * 2;
         }
       }
     }
-    
+
     @if $print-width > 7 {
       .quire-essay &,
       .quire-entry & {
@@ -325,10 +339,10 @@ $print-trim: $print-bleed * 2;
         column-gap: .1875in;
         max-width: 100%;
         margin: 0;
-      
+
         // with narrower columns, image should be full width
         .q-figure.is-pulled-left,
-        .q-figure.is-pulled-right {      
+        .q-figure.is-pulled-right {
           float: none;
           width: 100%;
           margin-left: 0;
@@ -336,9 +350,9 @@ $print-trim: $print-bleed * 2;
         }
       }
     }
-    
+
   }
-  
+
   // make other elements same width as single-column pages
   .quire-page__abstract {
     column-count: 1;
@@ -351,7 +365,7 @@ $print-trim: $print-bleed * 2;
       column-span: all;
     }
   }
-  
+
   .quire-entry__tombstone {
     column-count: 1;
     margin: 0 auto .25in;
@@ -363,7 +377,7 @@ $print-trim: $print-bleed * 2;
       column-span: all;
     }
   }
-  
+
   .quire-page__header.hero-image .hero-body {
     margin: 2.5in .5in 0;
     @if $print-width <= 7 {
@@ -371,25 +385,27 @@ $print-trim: $print-bleed * 2;
       margin: 2.5in auto 0;
     }
   }
-  
+
 // Content list grid view
 // -----------------------------------------------------------------------------
   $menu-grid-gap: .1875in;
   $menu-grid-item-margin: math.div($menu-grid-gap, 2);
-  
+
   $menu-grid-item-width: math.div($print-width - $print-outer-margin - $print-inner-margin - 3 * $menu-grid-gap, 3);
-  
+
   @if $print-width <= 7 {
     $menu-grid-item-width: math.div($print-width - $print-outer-margin - $print-inner-margin - (2 * $menu-grid-gap), 2);
   }
-  
+
   .quire-contents-list.grid .menu-list ol {
     .page-item {
       width: $menu-grid-item-width;
       height: 2.5in;
       margin-bottom: $menu-grid-gap;
-      background-color: $print-splash-color;
-      padding: 1em;
+      @if $theme == modern {
+        background-color: $print-splash-color;
+        padding: 1em;
+      }
       position: relative;
       * {
         margin: 0;
@@ -417,50 +433,67 @@ $print-trim: $print-bleed * 2;
       border-bottom: 1px solid $print-text-color;
       margin-bottom: .25in;
     }
-  }    
-  
+  }
+
 // Entry image pages
 // -----------------------------------------------------------------------------
-  $print-entry-image-width: $print-width - $print-inner-margin - $print-outer-margin;
   $print-entry-image-height: $print-height - $print-top-margin - $print-bottom-margin;
-  $print-entry-image-max-height: $print-entry-image-height - 1in;
+  $print-entry-image-width: $print-width - $print-inner-margin - $print-outer-margin;
 
-  // @todo determine why below with `&` was failing in webpack
-  // .quire-entry__image & figure {
-  .quire-entry__image-wrap figure {
+  .quire-entry__image-wrap .q-figure {
+    align-items: center;
+    border-width: 0px;
     display: flex;
     flex-direction: column;
     height: $print-entry-image-height;
-    margin-bottom: .5in;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
     @if $print-entry-image-display == first {
       display: none;
-      &:first-of-type {
-        display: block;
+      &:first-child {
+        display: flex;
       }
     }
-    break-after: page;    
-    .q-figure__media-fallback {
-      .q-figure__wrapper {
-        width: auto;
-        height: auto;
-      }
+    // make the img, or the div > img for video poster images
+    // fill but not exceed the space remaining from the caption
+    > :first-child {
+      flex-grow: 1;
+      height: 0;
+      object-fit: contain;
+      width: auto;
+    }
+    // align the poster image within its parent div
+    > div {
+      align-items: center;
+      display: flex;
       img {
         max-width: $print-entry-image-width;
-        max-height: $print-entry-image-max-height;
-        margin: 0 auto;
-        object-fit: contain;
+      }
+    }
+    .q-figure__caption {
+      color: $print-entry-caption-color;
+      font-size: .75rem;
+      margin-top: .5rem;
+      max-width: $print-base-text-column-width;
+      &-embed-link a {
+        color: $print-entry-caption-color;
         display: block;
+        margin-bottom: .5rem;
+      }
+      .q-figure__modal-link {
+        color: $print-entry-caption-color;
       }
     }
   }
-  
+
 // Improve page and line breaks
 // -----------------------------------------------------------------------------
   html body * {
     orphans: 2;
     widows: 2;
   }
-  
+
   // Use PrinceXML prince-text-replace to insert zero-width-spaces in URLs
   // that are printed in the text of the book, in order to facilitate better
   // line breaking per Chicago Manual of Style
@@ -482,12 +515,12 @@ $print-trim: $print-bleed * 2;
                           "\200B/\200B/" "//\200B"
                           "\200B:\200B:" "\200B::";
   }
-  
+
   // Same method as above but to improve breaks around em-dashes
   html body * {
     prince-text-replace: "—" "—\200B";
   }
-  
+
   // For contributor bio lists/pages
   .quire-contributor .title {
     page-break-after: avoid;
@@ -496,7 +529,7 @@ $print-trim: $print-bleed * 2;
     page-break-before: avoid;
     page-break-inside: auto;
   }
-  
+
 // Better list defaults and custom bullet alignment
 // -----------------------------------------------------------------------------
   .quire-page__content .container .content ul {
@@ -509,7 +542,7 @@ $print-trim: $print-bleed * 2;
   .quire-page__content .container .content hr:after {
     font-size: 7pt;
   }
-  
+
 // Globally hidden elements
 // -----------------------------------------------------------------------------
   html body {
@@ -523,7 +556,7 @@ $print-trim: $print-bleed * 2;
     .is-screen-only {
       display: none;
     }
-    
+
     // Leaflet
     .leaflet-pane,
     .leaflet-map-pane,
@@ -535,34 +568,20 @@ $print-trim: $print-bleed * 2;
 
 // Title Page and Half Title Page
 // -----------------------------------------------------------------------------
-  .fullPageBreak {
-    break-after: region;
-    height: $print-height;
-    width: $print-width;
-  }
-  
-  $title-page-margin: $print-outer-margin + .5;
-
   .title-page {
-    margin: 0 $print-bleed;
-    padding-right: $title-page-margin;
-    padding-left: $print-inner-margin;
-    height: $print-height;
-    @if $print-width <= 7 {
-      padding-right: $print-outer-margin;
-    }
+    page-break-before: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
     text-align: right;
-    padding-top: 3.25in;
-    @if $print-height <= 9 {
-      padding-top: 2.25in;
-    }
     font-family: $quire-headings-font;
 
-    span {
-      display: block;
+    * {
+      max-width: 5.5in;
     }
 
-    .title-tp {
+    .title {
       font-size: 4em;
       font-weight: 700;
       color: $accent-color;
@@ -570,70 +589,56 @@ $print-trim: $print-bleed * 2;
       margin-bottom: .3em;
     }
 
-    .sub-title {
-      font-size: 2.5em;
-      line-height: 1.3;
-    }
-
     .contributor {
       font-size: 1.75em;
       margin-top: .125in;
-      .quire-contributor {
-        display: inline;
-      }
     }
 
     .publisher {
       font-size: 1.5em;
       text-transform: uppercase;
       letter-spacing: 1pt;
-      position: absolute;
-      bottom: 1.5in;
-      right: $title-page-margin;
-      @if $print-width <= 7 {
-        right: $print-outer-margin;
-      }
-    }
-
-    @media screen {
-      .publisher-page__abstract {
-        position: fixed;
-      }
-    }
-
-    br {
-      display: none;
     }
   }
 
   .half-title-page {
-    margin: 0 $print-bleed;
-    padding-right: $title-page-margin;
-    padding-left: $print-inner-margin;
-    height: $print-height;
-    @if $print-width <= 7 {
-      padding-right: $print-outer-margin;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
     font-family: $quire-headings-font;
     font-size: 1.5em;
     color: $accent-color;
     text-align: right;
-    padding-top: 3.5in;
-    @if $print-height <= 9 {
-      padding-top: 2.5in;
-    }
-
-    span {
-      display: block; 
-    }
-
-    .title-htp {    
-      font-weight: 700;
-    }
-
-    .sub-title {
-      display: none;
-    }
   }
 
+  .copyright-page {
+    color: $print-text-color;
+    column-count: 2;
+    column-fill: auto;
+    column-gap: .1875in;
+    font-size: .75rem;
+    margin: 0;
+    max-width: 100%; 
+    .quire-page__header {
+      display: none;
+    } 
+    .quire-page__content .container .content {
+      ul {
+        margin-left: 0;
+        li {
+          margin: 0;
+          &::before {
+            content: none;
+          }
+        }
+      }
+      div {
+        margin-bottom: 1em;
+      }
+      .copyright__publisher-logo {
+        display: none;
+      }
+    }
+  }
 }
