Fix PDF footers to use short titles and html

--- a/_layouts/essay.liquid
+++ b/_layouts/essay.liquid
@@ -12,6 +12,7 @@ description: Essay layout. This layout describes a single-page template that has
   image=image,
   label=label,
   pageContributors=pageContributors,
+  short_title=short_title,
   subtitle=subtitle,
   title=title
 %}
