--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -268,6 +268,21 @@ nav.table-of-contents.menu-list + .content {
   font-size: 1.1em;
 }
 
+
+/* NAVBAR
+============================================================================= */
+/* Fix display of nav labels */
+.quire-navbar-page-controls__item.quire-next-page a,
+.quire-navbar-page-controls__item.quire-previous-page a {
+  white-space: nowrap;
+  max-width: calc((100vw - 18rem) * .5);
+}
+@media screen and (max-width: 900px) {
+  span.nav-label {
+    display: none !important;
+  }
+}
+
 /* MENU
 ============================================================================= */
 /* Make key menu items white */
