Remove use of transparent as possible fix for image ghosting
See issue #154

--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -10,7 +10,7 @@
 
   /* This is otherwise black by default, which can lead to issues:
   https://github.com/thegetty/conserving-canvas/issues/40 */
-  --atlas-background: transparent;
+  /* --atlas-background: transparent; */
 }
 
 /* UTILITY CLASSES
